// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryPage should render an empty <div /> if no description 1`] = `
<body>
  <div>
    <nav
      class="navbar"
    >
      <a
        class="brand"
        href="/"
      >
        John Doe
      </a>
      <ul
        class="nav-list"
      >
        <li
          class="nav-item"
        >
          <a
            href="/gallery"
          >
            Gallery
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            href="/contact"
          >
            Contact
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="container-fluid"
    >
      <div
        class="text-center pb3 pt5 px2"
      >
        <h3>
          Gallery
        </h3>
        <div />
      </div>
      <div
        class="gallery-container pb3"
        data-testid="gallery-container"
      >
        <div
          class="container panel"
        >
          <img
            alt="grid-svg.inline"
            data-checked="true"
            data-testid="data-test-svg"
            src="/assets/grid-svg.inline.svg"
            title="data-GRID"
          />
          <img
            alt="grid-col-svg.inline"
            data-checked="false"
            data-testid="data-test-svg"
            src="/assets/grid-col-svg.inline.svg"
            title="data-COL"
          />
          <img
            alt="grid-row-svg.inline"
            data-checked="false"
            data-testid="data-test-svg"
            src="/assets/grid-row-svg.inline.svg"
            title="data-ROW"
          />
        </div>
        <div
          class="modal"
          style="display: none;"
        >
          <span
            class="close"
            data-testid="close"
          >
            ×
          </span>
          <img
            class="modal-content"
            src="http://something-0.com"
          />
          <div
            class="caption"
          />
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      Reach me on
      <div
        class="social"
      >
        <a
          href="mailto:info@johndoe.com"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope fa-w-16 "
            data-icon="envelope"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </footer>
  </div>
</body>
`;

exports[`GalleryPage should render an empty <div /> if no title 1`] = `
<body>
  <div>
    <nav
      class="navbar"
    >
      <a
        class="brand"
        href="/"
      >
        John Doe
      </a>
      <ul
        class="nav-list"
      >
        <li
          class="nav-item"
        >
          <a
            href="/gallery"
          >
            Gallery
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            href="/contact"
          >
            Contact
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="container-fluid"
    >
      <div
        class="text-center pb3 pt5 px2"
      >
        <div />
        <h4>
          Look at my stuff!!
        </h4>
      </div>
      <div
        class="gallery-container pb3"
        data-testid="gallery-container"
      >
        <div
          class="container panel"
        >
          <img
            alt="grid-svg.inline"
            data-checked="true"
            data-testid="data-test-svg"
            src="/assets/grid-svg.inline.svg"
            title="data-GRID"
          />
          <img
            alt="grid-col-svg.inline"
            data-checked="false"
            data-testid="data-test-svg"
            src="/assets/grid-col-svg.inline.svg"
            title="data-COL"
          />
          <img
            alt="grid-row-svg.inline"
            data-checked="false"
            data-testid="data-test-svg"
            src="/assets/grid-row-svg.inline.svg"
            title="data-ROW"
          />
        </div>
        <div
          class="modal"
          style="display: none;"
        >
          <span
            class="close"
            data-testid="close"
          >
            ×
          </span>
          <img
            class="modal-content"
            src="http://something-0.com"
          />
          <div
            class="caption"
          />
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      Reach me on
      <div
        class="social"
      >
        <a
          href="mailto:info@johndoe.com"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope fa-w-16 "
            data-icon="envelope"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </footer>
  </div>
</body>
`;

exports[`GalleryPage should render with all information 1`] = `
<body>
  <div>
    <nav
      class="navbar"
    >
      <a
        class="brand"
        href="/"
      >
        John Doe
      </a>
      <ul
        class="nav-list"
      >
        <li
          class="nav-item"
        >
          <a
            href="/gallery"
          >
            Gallery
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            href="/contact"
          >
            Contact
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="container-fluid"
    >
      <div
        class="text-center pb3 pt5 px2"
      >
        <h3>
          Gallery
        </h3>
        <h4>
          Look at my stuff!!
        </h4>
      </div>
      <div
        class="gallery-container pb3"
        data-testid="gallery-container"
      >
        <div
          class="container panel"
        >
          <img
            alt="grid-svg.inline"
            data-checked="true"
            data-testid="data-test-svg"
            src="/assets/grid-svg.inline.svg"
            title="data-GRID"
          />
          <img
            alt="grid-col-svg.inline"
            data-checked="false"
            data-testid="data-test-svg"
            src="/assets/grid-col-svg.inline.svg"
            title="data-COL"
          />
          <img
            alt="grid-row-svg.inline"
            data-checked="false"
            data-testid="data-test-svg"
            src="/assets/grid-row-svg.inline.svg"
            title="data-ROW"
          />
        </div>
        <div
          class="modal"
          style="display: none;"
        >
          <span
            class="close"
            data-testid="close"
          >
            ×
          </span>
          <img
            class="modal-content"
            src="http://something-0.com"
          />
          <div
            class="caption"
          />
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      Reach me on
      <div
        class="social"
      >
        <a
          href="mailto:info@johndoe.com"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-envelope fa-w-16 "
            data-icon="envelope"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </footer>
  </div>
</body>
`;
